--- a/VKFeedNews/NewsFeed/Cell/NewsFeedCell.xib
+++ b/VKFeedNews/NewsFeed/Cell/NewsFeedCell.xib
@@ -114,7 +114,7 @@
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1234" textAlignment="natural" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H6E-ZN-lSh">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1234" textAlignment="natural" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H6E-ZN-lSh" userLabel="Likes Label">
                                         <rect key="frame" x="37" y="18" width="47" height="17"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
@@ -131,7 +131,7 @@
                 <outlet property="commentsLabel" destination="MVx-VQ-g6b" id="Jho-Ir-mOP"/>
                 <outlet property="dateLabel" destination="fGK-lT-Ikc" id="gTd-wS-M0Y"/>
                 <outlet property="iconImageView" destination="v3a-zT-n3T" id="fRM-tU-WxO"/>
-                <outlet property="likaLabel" destination="H6E-ZN-lSh" id="bgk-iQ-sv8"/>
+                <outlet property="likesLabel" destination="H6E-ZN-lSh" id="dla-GK-Tki"/>
                 <outlet property="nameLabel" destination="fGK-lT-Ikc" id="c9i-SN-Kei"/>
                 <outlet property="postLabel" destination="lig-7b-tYZ" id="vqE-ew-Mff"/>
                 <outlet property="sharesLabel" destination="7t1-c1-j4s" id="sxm-PE-JvJ"/>
